# xblast

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Imakefile  Makefile.am  Makefile.in  Makefile.w32  Makefile.windows  NEWS  README  README.txt  SConstruct  SDL_vkeys.h  acinclude.m4  aclocal.m4  action.c  action.h  atom.c  atom.h  autogen.sh  automake.fig  bad_words.c  bad_words.h  bad_words.txt  bomb.c  bomb.h  bot.c  bot.h  browse.c  browse.h  central.c  central.h  cfg_control.c  cfg_control.h  cfg_demo.c  cfg_demo.h  cfg_game.c  cfg_game.h  cfg_level.c  (+276 more)
debian/: changelog  control  copyright  rules
image/: Imakefile  Makefile.am  Makefile.in
image/block/: EPFL_stop.ppm  Imakefile  Makefile.am  Makefile.in  air_pump.ppm  bomb.ppm  bomb_floor.ppm  bomb_floor_black.ppm  book_shelf.ppm  box.ppm  brick_O.ppm  bricks.ppm  button_floor.ppm  button_floor_X.ppm  check.ppm  cheese.ppm  chess_floor.ppm  chess_sphere.ppm  chess_sphere_O.ppm  chest.ppm  chest_O.ppm  city_free.ppm  city_free_X.ppm  city_rip.ppm  city_rip_R.ppm  cloak.ppm  construction.ppm  control_alpha.ppm  control_num.ppm  d_world.ppm  d_world_extra.ppm  daleif.ppm  dark_block_R.ppm  dark_block_X.ppm  dark_house.ppm  dark_house_R.ppm  dark_way_S.ppm  dark_way_X.ppm  display.ppm  doom.ppm  (+142 more)
image/explosion/: Imakefile  Makefile.am  Makefile.in  bomb_0.pbm  bomb_0.ppm  bomb_1.pbm  bomb_1.ppm  bomb_10.pbm  bomb_10.ppm  bomb_11.pbm  bomb_11.ppm  bomb_12.pbm  bomb_12.ppm  bomb_13.pbm  bomb_13.ppm  bomb_14.pbm  bomb_14.ppm  bomb_15.pbm  bomb_15.ppm  bomb_2.pbm  bomb_2.ppm  bomb_3.pbm  bomb_3.ppm  bomb_4.pbm  bomb_4.ppm  bomb_5.pbm  bomb_5.ppm  bomb_6.pbm  bomb_6.ppm  bomb_7.pbm  bomb_7.ppm  bomb_8.pbm  bomb_8.ppm  bomb_9.pbm  bomb_9.ppm  bomb_x.pbm  bomb_x.ppm  expl.pbm  expl.pos  expl.ppm  (+67 more)
image/misc/: Imakefile  Makefile.am  Makefile.in  color.ppm  icon_abort.pbm  icon_abort.ppm  icon_color.pbm  icon_color.ppm  icon_default.pbm  icon_default.ppm  icon_led_off.pbm  icon_led_off.ppm  icon_led_on.pbm  icon_led_on.ppm  icon_loser.pbm  icon_loser.ppm  icon_target.pbm  icon_target.ppm  text_bg.ppm  text_fg.ppm  title.ppm
image/score/: Imakefile  Makefile.am  Makefile.in  led_off.ppm  led_on.ppm  player.epm  player_abort.epm  player_dead.epm  player_sick.epm  player_sick_abort.epm  text_left.ppm  text_middle.ppm  text_right.ppm  tile_void.ppm
image/sprite/: Imakefile  Makefile.am  Makefile.in  cowboy_B.epm  cowboy_B.pbm  cowboy_DD.epm  cowboy_DD.pbm  cowboy_DL.epm  cowboy_DL.pbm  cowboy_DR.epm  cowboy_DR.pbm  cowboy_DU.epm  cowboy_DU.pbm  cowboy_D_0.epm  cowboy_D_0.pbm  cowboy_D_1.epm  cowboy_D_1.pbm  cowboy_D_2.epm  cowboy_D_2.pbm  cowboy_D_3.epm  cowboy_D_3.pbm  cowboy_D_S.epm  cowboy_D_S.pbm  cowboy_L.epm  cowboy_L.pbm  cowboy_L1.epm  cowboy_L1.pbm  cowboy_L2.epm  cowboy_L2.pbm  cowboy_L_0.epm  cowboy_L_0.pbm  cowboy_L_1.epm  cowboy_L_1.pbm  cowboy_L_2.epm  cowboy_L_2.pbm  cowboy_L_3.epm  cowboy_L_3.pbm  cowboy_L_S.epm  cowboy_L_S.pbm  cowboy_R_0.epm  (+1216 more)
level/: 321NOWhere.xal  321Partez.xal  3_2_1_contact.xal  3d_world.xal  APactWithEvil.xal  AThreeByThreeHell.xal  Aberlour.xal  Agoraphobia.xal  Agoraphobia2.xal  Ahahahah2.xal  AimRight3.xal  Aisle.xal  AllBeingEqual.xal  AllGoodThings.xal  Alleys.xal  AmazingBlaze.xal  Ambush.xal  Ambush2.xal  AnotherBigFurnace.xal  AntiGravity.xal  AntiGravity3.xal  AntiMitch.xal  AntiPersonnalMines.xal  AreYouDown.xal  Arena.xal  Arena2.xal  AssHole.xal  Atmosphere.xal  BORNDEAD.xal  Backdraft.xal  Battlefield.xal  Behind.xal  BigBang.xal  BiggerThanOthers.xal  BlackHandHill.xal  BlackHandHill2.xal  BlackHandHill3.xal  BlackHandHill4.xal  BlackHandHill5.xal  BlackZone2.xal  (+1197 more)
po/: Makevars  POTFILES.in  de.po  fr.po  xblast.pot
sounds/: Imakefile  xb_app2.raw  xb_appl.raw  xb_bad.raw  xb_bombmorph.raw  xb_butt.raw  xb_cmpnd.raw  xb_dead.raw  xb_drop.raw  xb_expl.raw  xb_haunt.raw  xb_intro.raw  xb_kick.raw  xb_nvis.raw  xb_nvnc.raw  xb_ouch.raw  xb_pump.raw  xb_shoot.raw  xb_spbmb.raw  xb_spir.raw  xb_stun.raw  xb_warn.raw  xb_whrl.raw  xb_won.raw  xbcloak.raw  xbcloakx.raw  xbdcloak.raw  xbfast.raw  xbfin.raw  xbfire.raw  xbholy.raw  xbinj.raw  xblife.raw  xbmbmb.raw  xbnbmb.raw  xbnkick.raw  xbnpmp.raw  xbnrc.raw  xbntel.raw  xbslay.raw  (+17 more)
