dnl Process this file with autoconf to produce a configure script.
AC_INIT(action.c)

dnl Checks for programs.
AC_CANONICAL_SYSTEM
AC_PROG_CC
AM_INIT_AUTOMAKE([xblast], 2.10.0 )
AC_CONFIG_HEADER(config.h)
if test x$build_cpu = xsparc ; then
	 CPPFLAGS="$CPPFLAGS -Dsparc"
fi
case "${target_os}" in
  solaris*)
    LDFLAGS="$LDFLAGS -lX11 -lsocket -lnsl"
  esac


AC_PROG_INSTALL
AC_PATH_X
AC_PATH_XTRA
if test x$have_x = xyes ; then
    CPPFLAGS="$CPPFLAGS $X_CFLAGS"
    LDFLAGS="$LDFLAGS $X_LIBS"
fi
dnl AC_DEFINE_UNQUOTED(DATADIR, "$datadir")
dnl Checks for libraries.
dnl Replace `main' with a function in -lICE:
AC_CHECK_LIB(ICE, main)
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)
AC_CHECK_LIB(m, main)
AC_CHECK_LIB(png, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h unistd.h)
AH_TEMPLATE([GAME_DATADIR], [for packed])
AC_ARG_ENABLE([admin],[  --enable-admin, data will be installed (and can be only started from) $prefix/share/XBlast-TNT/], MY_EXPAND_DIR(game_datadir, "$datadir"))
 AC_ARG_WITH([otherdatadir],[  --with-otherdatadir=OTHERDATADIR            If you dont want that the data go to: $prefix/share/XBlast-TNT/],
game_datadir="$with_otherdatadir",
game_datadir="./")

dnl AC_DEFINE_UNQUOTED( [GAME_DATADIR]  , ["$game_datadir"] , ["a comment here"] )
datadir=$game_datadir;

CFLAGS="$CFLAGS -DGAME_DATADIR=\\\"$datadir\\\""
AC_SUBST(datadir)
AC_SUBST(game_datadir)
AC_MSG_RESULT("datadir is $game_datadir")

AH_TEMPLATE([XBLAST_CHAT_FILTER],[for bad word chat filters])
AC_ARG_ENABLE([chat-filter],AS_HELP_STRING([--enable-chat-filter],[Enables the bad word chat filters.]), [
  case "${enableval}" in
	  (yes) AC_MSG_RESULT([configured with bad word chat filters.])
		    AC_DEFINE(XBLAST_CHAT_FILTER)
		    ;;
	  (no)  AC_MSG_RESULT([configured without bad word chat filters.])
		    ;;
	  (*)   AC_MSG_ERROR([Bad value ${enableval} given for --enable-chat-filter.])
		    ;;
  esac],[
AC_MSG_RESULT([configured with bad word chat filters.])
AC_DEFINE(XBLAST_CHAT_FILTER)])

AC_ARG_ENABLE([sound],[  --enable-sound, enable compilation of xbsndsrv!], [
case "${enableval}" in
  yes) xbsndsrv=true 
  CFLAGS="$CFLAGS -DXBLAST_SOUND";;
  no)  xbsndsrv=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-sound) ;;
esac],[xbsndsrv=false])
AM_CONDITIONAL(XBSNDSRV, test x$xbsndsrv = xtrue)
AC_MSG_RESULT("sound compilation ... $xbsndsrv")

AC_ARG_ENABLE([mini],[  --enable-mini, enable compilation with -DMINI!], [
case "${enableval}" in
  yes) CFLAGS="$CFLAGS -DMINI_XBLAST" 
  mini=true;;
  no) mini=false  ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-mini) ;;
esac],mini=false)
AC_MSG_RESULT("mini compilation ... $mini")
AC_ARG_ENABLE([SMPF],[  --enable-SMPF, enable compilation with -DSMPF (for 16 players)!], [
case "${enableval}" in
  yes) CFLAGS="$CFLAGS -DSMPF" 
  smpf=true;;
  no) smpf=false  ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-smpf) ;;
esac],smpf=false)
AC_MSG_RESULT("SMPF compilation ... $smpf")
dnl AC_DEFINE_UNQUOTED(XBSNDSRV, "$xbsndsrv")

dnl CFLAGS="$(CFLAGS)" -DDATADIR="$(datadir)"
dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday mkdir select socket strstr)
AC_OUTPUT(Makefile )
